[package]
name = "probe_code_test"
version = "0.1.0"
edition = "2021"
authors = ["Per Lindgren <per.lindgren@ltu.se>"]

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }

rtt-target = { version = "0.3.1", features = ["cortex-m"] }

nrf52840-hal = { version = "0.16", features = ["rt"] }
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

cortex-m-rtic = "1.1.3"
dwt-systick-monotonic = "1.1.0"
systick-monotonic = "1.0.0"
rtic-monotonic = "1.0.0"
fugit = "0.3.6"
embedded-hal = "0.2.7"
ssmarshal = { version = "1.0.0", default-features = false }

[profile.dev]
#opt-level = "s"

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
debug-assertions = true

